// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/users/hire-dev Responds with status code 200 and Object containing message "Jane Mary has been added back to the platform" where "hired" is false 1`] = `
Object {
  "message": "Jane Mary has been added back to the platform",
  "payload": Object {
    "decadev": "Jane Mary",
  },
}
`;

exports[`/users/hire-dev Responsds with status code 200 and Object containing message 1`] = `
Object {
  "message": "Jane Mary has been hired",
  "payload": Object {
    "decadev": "Jane Mary",
  },
}
`;

exports[`/users/hire-dev Responsds with status code 404 and Object containing message "decadev not found!" 1`] = `
Object {
  "message": "decadev not found!",
}
`;
